--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-21
-android.library.reference.1=../../fling_sdk_android/lib_source/appcompat
+android.library.reference.1=../VitamioBundle/vitamio
+android.library.reference.2=../../fling_sdk_android/lib_source/appcompat
