--- a/receiver/AndroidManifest.xml
+++ b/receiver/AndroidManifest.xml
@@ -20,11 +20,11 @@
         <activity
             android:name="com.infthink.flintreceiver.receiver.SimpleMediaPlayerActivity"
             android:configChanges="orientation|screenSize"
+            android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
-        
         <activity
             android:name="com.infthink.flintreceiver.receiver.MediaPlayerActivity"
             android:configChanges="orientation|screenSize"
@@ -36,7 +36,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity
+            android:name="com.infthink.flintreceiver.receiver.FlintContainerActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize"
+            android:exported="true"
+            android:hardwareAccelerated="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        </activity>
         <activity
             android:name="io.vov.vitamio.activity.InitActivity"
             android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
