--- a/receiver/project.properties
+++ b/receiver/project.properties
@@ -15,4 +15,4 @@ target=android-21
 android.library.reference.1=../../../fling_sdk_android/lib_source/appcompat
 android.library.reference.2=../../VitamioBundle/vitamio
 android.library.reference.3=../sdk
-android.library.reference.4=../../../crosswalk-12.40.278.0/xwalk_core_library
+android.library.reference.4=../../crosswalk-13.41.313.0/xwalk_core_library
